--- a/osa0/04.md
+++ b/osa0/04.md
@@ -1,3 +1,4 @@
+```mermaid
 sequenceDiagram
     participant User as Käyttäjä
     participant Browser as Selaimessa
@@ -22,3 +23,4 @@ sequenceDiagram
     Browser->>Server: GET /exampleapp/data.json
     Server-->>Browser: JSON data sisältäen uuden muistiinpanon
     Note right of Browser: JavaScript renderöi uuden muistiinpanon näkyville.
+    ```
