--- a/osa0/04.md
+++ b/osa0/04.md
@@ -1,26 +1,38 @@
 ```mermaid
 sequenceDiagram
-    participant User as Käyttäjä
-    participant Browser as Selaimessa
-    participant Server as Palvelin
+    participant browser
+    participant server
+    
+    browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
+    activate server
+    Note right of server: The server receives the new note and saves it.
+    server-->>browser: 302 Found (redirect to /notes)
+    deactivate server
+    
+    Note right of browser: The browser follows the redirect.
 
-    User->>Browser: Kirjoittaa muistiinpanon tekstikenttään ja painaa "Tallenna"
-    Browser->>Server: POST /exampleapp/new_note
-    Note right of Server: Palvelin vastaanottaa muistiinpanon ja tallentaa sen.
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
+    activate server
+    server-->>browser: HTML document
+    deactivate server
+    
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+    activate server
+    server-->>browser: the css file
+    deactivate server
+    
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    activate server
+    server-->>browser: the JavaScript file
+    deactivate server
+    
+    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
+    
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+    activate server
+    server-->>browser: [{ "content": "HTML is easy", "date": "2023-1-1" }, ... ]
+    deactivate server    
 
-    Server-->>Browser: 302 Found (uudelleenohjaus sivulle /notes)
-    Note right of Browser: Selaimessa seuraa uudelleenohjaus.
+    Note right of browser: The browser executes the callback function that renders the notes, including the newly added note.
 
-    Browser->>Server: GET /exampleapp/notes
-    Server-->>Browser: HTML dokumentti
-    Browser->>Server: GET /exampleapp/main.css
-    Server-->>Browser: CSS tiedosto
-    Browser->>Server: GET /exampleapp/main.js
-    Server-->>Browser: JavaScript tiedosto
-
-    Note right of Browser: Selaimessa alkaa JavaScriptin suorittaminen.
-
-    Browser->>Server: GET /exampleapp/data.json
-    Server-->>Browser: JSON data sisältäen uuden muistiinpanon
-    Note right of Browser: JavaScript renderöi uuden muistiinpanon näkyville.
 ```
