Correction to 04.md

--- a/osa0/04.md
+++ b/osa0/04.md
@@ -5,7 +5,7 @@ sequenceDiagram
 
     browser->>server: POST https://studies.cs.helsinki.fi/exampleapp/new_note
     activate server
-    Note right of server: The server receives the new note and saves it.
+    Note right of server: The server receives the new note and ads it array named notes.
     server-->>browser: 302 Found (redirect to /notes)
     deactivate server
 
