--- a/osa0/05.md
+++ b/osa0/05.md
@@ -1,32 +1,32 @@
 ```mermaid
 
 sequenceDiagram
-    participant browser as Selain
-    participant server as Palvelin
+    participant browser as Browser
+    participant server as Server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
     activate server
-    server-->>browser: HTML dokumentti
+    server-->>browser: HTML document
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
     activate server
-    server-->>browser: CSS-tiedosto
+    server-->>browser: CSS file
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
     activate server
-    server-->>browser: JavaScript-tiedosto (spa.js)
+    server-->>browser: JavaScript file (spa.js)
     deactivate server
 
-    Note right of browser: Selain alkaa suorittaa JavaScript-koodia (spa.js)
+    Note right of browser: The browser starts executing the JavaScript code (spa.js)
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
-    server-->>browser: JSON-muotoinen data (muistiinpanot)
+    server-->>browser: JSON data (notes)
     deactivate server
 
-    Note right of browser: Selain käsittelee JSON-datan ja renderöi muistiinpanot DOM:iin JavaScriptin avulla.
+    Note right of browser: The browser processes the JSON data and renders the notes to the DOM using JavaScript.
 
 
 ```
